Added some contact information at the bottom and reviewed the icons

--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
         </div>
 
         <ul class="icons">
-            <a class= "icon" class="linkedin" href="https://www.linkedin.com/in/osinachi-atama/"><img height = "50" width="50" src="images/linkedin.png" alt=""></a>
-            <a class= "icon" href="https://github.com/OsinachiAtama"><img class= "github"src="images/github.png" alt="" height="50" width="50"></a>
+            <a class="icon"   href="https://www.linkedin.com/in/osinachi-atama/">
+                <i class='bx bxl-linkedin' ></i></a>
+            <a  class="icon" href="https://github.com/OsinachiAtama">
+                <i class='bx bxl-github' ></i>
+            </a>
         </ul>
 
 
@@ -162,14 +165,16 @@
         </form>
 
         <footer>
-            <div class="col-left">
-                <span> 
+            <div>
+                <span><i class='bx bxl-gmail'></i>
                     osinachi.atama@gmail.com
                 </span>
             </div>
 
-            <div class="col-right">
-
+            <div>
+                <span><i class='bx bxs-phone' ></i>
+                   +1 857 829 9689
+                </span>
             </div>
         </footer>
 
